cvsite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvsite
spec:
  selector:
    matchLabels:
      app: cvsite
  replicas: 2
  template:
    metadata:
      labels:
        app: cvsite
    spec:
      containers:
        - name: cvsite
          image: mhemeryck/cvsite:latest
---
kind: Service
apiVersion: v1
metadata:
  name: cvsite
spec:
  selector:
    app: cvsite
  ports:
    - port: 80
