mastodon.yaml
# postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mastodon-postgres
spec:
  selector:
    matchLabels:
      app: mastodon-postgres
  serviceName: mastodon-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-postgres
    spec:
      volumes:
        - name: mastodon-pgdata
          persistentVolumeClaim:
            claimName: mastodon-pgdata
      containers:
        - name: mastodon-postgres
          image: postgres:15.1-alpine3.16
          resources:
            limits:
              memory: 1Gi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: mastodon-pgdata
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-postgres
spec:
  selector:
    app: mastodon-postgres
  ports:
    - port: 5432
      targetPort: 5432

# redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mastodon-redis
spec:
  selector:
    matchLabels:
      app: mastodon-redis
  serviceName: mastodon-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: mastodon-redis
    spec:
      containers:
        - name: mastodon-redis
          image: redis:7-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-redis
spec:
  selector:
    app: mastodon-redis
  ports:
    - port: 6379

# web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
spec:
  selector:
    matchLabels:
      app: mastodon-web
  template:
    metadata:
      labels:
        app: mastodon-web
    spec:
      containers:
        - name: mastodon-web
          image: tootsuite/mastodon:v3.5.4
          ports:
            - containerPort: 3000
          command: ["/bin/sh"]
          args:
            - -c
            - |
              rm -f /mastodon/tmp/pids/server.pid
              bundle exec rails s -p 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-web
spec:
  selector:
    app: mastodon-web
  ports:
    - port: 80
      targetPort: 3000
