akaunting.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: akaunting

# ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: akaunting
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - akaunting.mhemeryck.com
      secretName: akaunting-mhemeryck-com-tls
  rules:
    - host: akaunting.mhemeryck.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: akaunting
                port:
                  number: 80
# mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: akaunting
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: akaunting-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
      containers:
        - name: mariadb
          image: mariadb:lts
          resources:
            limits:
              memory: 1Gi
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: akaunting
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306

# akaunting
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akaunting
  namespace: akaunting
spec:
  selector:
    matchLabels:
      app: akaunting
  template:
    metadata:
      labels:
        app: akaunting
    spec:
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
      containers:
        - name: akaunting
          image: docker.io/akaunting/akaunting:3.0.16-v
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: akaunting
  namespace: akaunting
spec:
  selector:
    app: akaunting
  ports:
    - port: 80
      targetPort: 80
