bitwarden.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      volumes:
        - name: vault
          persistentVolumeClaim:
            claimName: vault
      containers:
        - name: bitwarden
          image: vaultwarden/server:1.37.2-alpine
          volumeMounts:
            - name: vault
              mountPath: /data
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pgdata
      containers:
        - name: postgres
          image: postgres:16.3-alpine3.20
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bitwarden
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    kubernetes.io/ingress.className: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bitwarden.mhemeryck.xyz
      secretName: bitwarden-mhemeryck-xyz-tls
  rules:
    - host: bitwarden.mhemeryck.xyz
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: bitwarden
                port:
                  number: 80
