ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - cv.mhemeryck.com
        - mhemeryck.com
      secretName: cv-mhemeryck-com-tls
    - hosts:
        - wekan.mhemeryck.com
      secretName: wekan-mhemeryck-com-tls
    - hosts:
        - grafana.mhemeryck.com
      secretName: grafana-mhemeryck-com-tls
  rules:
    - host: cv.mhemeryck.com
      http: &cv_http
        paths:
          - backend:
              serviceName: cvsite
              servicePort: 80
    - host: mhemeryck.com
      http: *cv_http
    - host: wekan.mhemeryck.com
      http:
        paths:
          - backend:
              serviceName: wekan
              servicePort: 80
    - host: grafana.mhemeryck.com
      http:
        paths:
          - backend:
              serviceName: prometheus-grafana
              servicePort: 80
