wekan.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wekan
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wekan
  namespace: wekan
spec:
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
        - name: wekan
          image: wekanteam/wekan:v7.44
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wekan
  namespace: wekan
spec:
  selector:
    app: wekan
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: wekan
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo:6.0.26-jammy
          volumeMounts:
            - name: mongodb
              mountPath: /data/db
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: wekan
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.className: traefik
  name: wekan
  namespace: wekan
spec:
  ingressClassName: traefik
  rules:
    - host: wekan.mhemeryck.xyz
      http:
        paths:
          - backend:
              service:
                name: wekan
                port:
                  number: 80
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - wekan.mhemeryck.xyz
      secretName: wekan-mhemeryck-xyz-tls
